--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ repository               : "bosedebraj96/bosedebraj96.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "Current_Picture.jpg"
   name             : "Debraj Bose"
   pronouns         : # example: "she/her"  
-  bio              : "https://www.linkedin.com/in/debrajbose96/"
+  bio              : # 
   location         : "Ann Arbor, MI"
   employer         : "University of Michigan"
   uri              : # URL
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/debrajbose96/"
+  linkedin         : "Debraj Bose"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
