--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Debraj Bose"
+  linkedin         : "debrajbose96"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
